2010-10-25 [wwp]	0.9.1cvs12

	* src/poppler_viewer.c
		Fix undefined PIXMAP_CREATE since 3.7.6cvs56, use the
		definition as it was in gtkutil.c (thanks to Paul for
		the fix, you lazy man).

2010-04-30 [paul]	0.9.1cvs11

	* po/fi.po
		updated by Flammie Pirinen

2010-03-24 [pawel]	0.9.1cvs10

	* commitHelper
		- Portability fixes
		- Add my name
	* src/poppler_viewer.c
		Fix build with GTK+ 2.19

2009-07-03 [paul]	0.9.1cvs9

	* configure.ac
	* po/cs.po
	* po/id.po
	* po/ja.po
	* po/ru.po
		added by David Vachulka, MSulchan Darmawan, kazken3,
		and Aleksei Miheev
	* po/fi.po
	* po/hu.po
	* po/it.po
		updated by Tommi Pirinen, Pader Rezso, and
		Andrea Spadaccini

2009-01-02 [colin]	0.9.1cvs8

	* src/poppler_viewer.c
	* src/poppler_viewer.h
		Move to stock_pixbuf

2008-11-28 [cleroy]	0.9.1cvs7

	* po/fr.po
		Update

2008-10-04 [colin]	0.9.1cvs6

	* src/poppler_viewer.c
		Win32: set translation dir

2008-08-07 [colin]	0.9.1cvs5

	* src/poppler_viewer.c
		Undeprecate

2008-08-05 [colin]	0.9.1cvs4

	* src/poppler_viewer.c
		Fix build

2008-07-29 [colin]	0.9.1cvs3

	* src/poppler_viewer.c
		Switch the main menu to GtkUIManager

2008-07-20 [colin]	0.9.1cvs2

	* src/poppler_viewer.c
		Undeprecate tooltips

2008-04-18 [colin]	0.9.1cvs1

	* src/poppler_viewer.c
		Use claws_unlink instead of g_unlink

2008-04-18 [paul]	0.9.1

	0.9.1 released

	* po/fi.po
	* po/fr.po
	* po/it.po
		updated by Flammie Pirinen, Colin and Andrea Spadaccini

2008-04-18 [colin]	0.9.0cvs2

	* po/fr.po
		Update translation

2008-03-12 [colin]	0.9.0cvs1

	* configure.ac
		Enable -Wall

2008-02-08 [paul]	0.9.0

	0.9.0 released

2008-02-08 [paul]	0.8.0cvs6

	* po/fi.po
	* po/it.po
		updated by Flammie Pirinen and Andrea Spadaccini

2008-02-03 [iwkse]	0.8.0cvs5

	* po/Makevars
		email change

2008-02-03 [iwkse]	0.8.0cvs4

	* po/ca.po
	* po/de.po
	* po/es.po
	* po/fi.po
	* po/hu.po
	* po/pl.po
	* po/pt_BR.po
	* po/sk.po
	* po/sr.po
		address change

2008-01-31 [iwkse]	0.8.0cvs3

	* src/poppler_viewer.c