@@ -128,3 +128,4 @@
 ( cvs diff -u -r 1.1.2.2 -r 1.1.2.3 commitHelper;  cvs diff -u -r 1.1.2.89 -r 1.1.2.90 src/poppler_viewer.c;  ) > 0.9.1cvs10.patchset
 ( cvs diff -u -r 1.1.2.8 -r 1.1.2.9 po/fi.po;  ) > 0.9.1cvs11.patchset
 ( cvs diff -u -r 1.1.2.90 -r 1.1.2.91 src/poppler_viewer.c;  ) > 0.9.1cvs12.patchset
+( cvs diff -u -r 1.1.2.91 -r 1.1.2.92 src/poppler_viewer.c;  ) > 0.9.1cvs13.patchset
